--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,9 @@ jobs:
 
       - name: Probar codigo
         run: python3 main.py
+        
+      - name: Crear imagen docker
+        run: docker build -t NagoreGomez/holamundo .
+
+      - name: Probar imagen
+        run: docker run NagoreGomez/holamundo
