--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 name: Mi workflow
 
-on: push 
+on: 
+  push:
+    branches:
+      - main
 
 jobs: 
-  tareas: 
+  test: 
     runs-on: ubuntu-latest
     steps: 
       - name: Bajar codigo
@@ -11,7 +14,11 @@ jobs:
 
       - name: Probar codigo
         run: python3 main.py
-        
+  
+  build_push:
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
